# GraphRAG

./: (최종)10조 보고서_RAG 파이프라인 비교.docx  .gitignore  10조_주택청약_RAG_비교_보고서.docx  README.md  adapt_guide.md  debug_response.json  pyproject.toml  three_rag_pipeline_comparison_1stPJT.ipynb  three_rag_pipeline_comparison_home.ipynb  windows_etl_project_driver.ipynb  windows_home_project_driver.ipynb
data/: README.md
docs/: metadata_field_guide.md  metadata_statistics.md
partial_scripts/: 01_prepare_partial_manifest.py  02_download_partial_pdfs.py  03_extract_pdf_text.py  04_extract_case_issues.py  05_build_issue_embedding_index.py  06_bm25_raw_text_demo.py  07_bm25_issue_demo.py  08_dense_issue_search.py  09_bm25_raw_rag_answer.py  10_bm25_issue_rag_answer.py  11_extract_graph_features.py  12_build_issue_graph.py  13_export_sigma_viewer.py  14_graph_rag_answer.py  README.md  _common.py
queries/: queries.md
results/: 01_bm25_vs_issue_rag_observations.md  02_graph_rag_answer_observations.md  15_search_agent_demo_output.md  15_search_agent_finish_before_limit_output.md  etl_graph_viewer_sigma.html  housing_graph_viewer_sigma.html  three_pipeline_comparison_report.md
scripts/: 00_scrapping_qna.py  01_download_case_metadata.py  02_download_sample_pdfs.py  03_extract_pdf_text.py  04_extract_case_issues.py  05_build_issue_embedding_index.py  06_bm25_raw_text_demo.py  07_bm25_issue_demo.py  08_dense_issue_search.py  09_bm25_raw_rag_answer.py  10_bm25_issue_rag_answer.py  11_extract_graph_features.py  12_build_issue_graph.py  13_export_sigma_viewer.py  14_graph_rag_answer.py  (+2 more)
(+231 files in other folders)
